- add Challenge without menu and access to reward