@@ -20,23 +20,21 @@ public class ChallengeManager {
 
     private final List<Challenge<? extends Event, ?>> registeredChallenges = new ArrayList<>();
 
-    public ChallengeManager(SkyBlock skyBlock) {
-        createChallenges(skyBlock);
-        registerChallengesEvent(skyBlock, skyBlock.getServer().getPluginManager());
+    public ChallengeManager(SkyBlock skyblock) {
+        createChallenges(skyblock);
+        registerChallengesEvent(skyblock, skyblock.getServer().getPluginManager());
     }
 
-    private void createChallenges(SkyBlock skyBlock) {
-        new ReproduceAnimalChallenge(skyBlock, 0, Challenge.Difficulty.EASY, Arrays.asList(1, 2),
-                List.of(Arrays.asList(EntityType.COW, EntityType.SHEEP)),
-                new Reward(Arrays.asList(new ItemStack(Material.APPLE, 2), new ItemStack(Material.DIAMOND))));
-
-        new ReproduceAnimalChallenge(skyBlock, 1, Challenge.Difficulty.EASY, Arrays.asList(5, 2),
-                Arrays.asList(Arrays.asList(EntityType.COW, EntityType.SHEEP), List.of(EntityType.PIG)),
-                new Reward(List.of(new ItemStack(Material.IRON_INGOT, 5)), 5));
+    private void createChallenges(SkyBlock skyblock) {
+        addNewChallenges(
+                new ReproduceAnimalChallenge(skyblock, 1, Challenge.Difficulty.EASY, Arrays.asList(5, 2),
+                        Arrays.asList(Arrays.asList(EntityType.COW, EntityType.SHEEP), List.of(EntityType.PIG)),
+                        new Reward(List.of(new ItemStack(Material.IRON_INGOT, 5)), 5))
+                );
     }
 
-    private void registerChallengesEvent(SkyBlock skyBlock, PluginManager pluginManager) {
-        pluginManager.registerEvents(new ReproduceAnimalChallenge.ListenerEvent(this), skyBlock);
+    private void registerChallengesEvent(SkyBlock skyblock, PluginManager pluginManager) {
+        pluginManager.registerEvents(new ReproduceAnimalChallenge.ListenerEvent(this), skyblock);
     }
 
     public List<Challenge<? extends Event, ?>> getRegisteredChallenges() {
@@ -44,16 +42,29 @@ public class ChallengeManager {
     }
 
     public boolean challengeExist(int id) {
-        return registeredChallenges.stream().parallel().anyMatch(challenge -> challenge.getId() == id);
+        return registeredChallenges.stream().parallel().anyMatch(challenge -> challenge.getID() == id);
     }
 
     @Nullable
     public Challenge<? extends Event, ?> getChallengeByID(int id) {
-        return registeredChallenges.stream().parallel().filter(challenge -> challenge.getId() == id).findFirst().orElse(null);
+        return registeredChallenges.stream().parallel().filter(challenge -> challenge.getID() == id).findFirst().orElse(null);
     }
 
     public List<? extends Challenge<? extends Event, ?>> getChallengesByType(Challenge.Type type) {
         return registeredChallenges.stream().parallel().filter(challenge -> challenge.getType() == type).toList();
+    }
+
+    @SafeVarargs
+    public final void addNewChallenges(Challenge<? extends Event, ?>... challenges) {
+        Arrays.stream(challenges).forEach(challenge ->  {
+            final int id = challenge.getID();
+            if(challengeExist(id)) {
+                final Challenge<?, ?> otherChallenge = getChallengeByID(id);
+                throw new RuntimeException((challenge.equals(otherChallenge)) ? "Their is a duplication of Challenge with id "+id : "The Challenge "+challenge.getName()+" can't be initialized because his id is already use by the Challenge "+otherChallenge.getName());
+            }
+            getRegisteredChallenges().add(challenge);
+        });
+
     }
 
 }
